Fixes the order of the css code as well as makes it more readable

--- a/style.css
+++ b/style.css
@@ -156,10 +156,7 @@ p#main{
     float: left;
     margin: 2%;
 }
-#tits{
-	color:black;
-	text-align:center;
-}
+
 #popup,#popup1,#popup2,#popup3,#popup4 {
  font-family: Tahoma ,Helvetica,Arial,sans-serif; 
     text-align: center;
@@ -181,6 +178,8 @@ p#main{
 
 }
 
+/*****************************************************************************/	
+/*This is for the Test.html File*/
 #container {
 	/*Makes a shitty ass container for testing purposes, because I'm lazy*/
     width:50%;
@@ -199,6 +198,50 @@ color:#E4001B;
 #container a{
 	color:#E4001B;
 }
+/*****************************************************************************/
+/*Tits stands for title something or other, i forget what the something or other stood for when I came up with it. It is the title of the quiz and I did not realize what I had written until after it was too late*/
+#tits{
+	color:black;
+	text-align:center;
+}
+/*****************************************************************************/
+/*This formats the text entry areas in the quiz*/
+input[type=text], textarea, select{
+width: 100%;
+padding: 13px 21px;
+margin: 9px 0;
+display: inline-block;
+border: 5px solid #ccc;
+border-radius: 9px;
+box-sizing: border-box;
+font-size: 15px;
+}
+/*This takes care of the formatting for the form buttons*/
+input[name="B1"] {
+background-color: #a9a9a9;
+color: #ff3b3f;
+font-size: 21px;
+padding:20px 20px;
+margin: 9px 0;
+border: none;
+border-radius: 9px;
+cursor: pointer;
+	}
+
+input[name="B2"] {
+background-color: #a9a9a9;
+color: #ff3b3f;
+font-size: 21px;
+padding:20px 20px;
+margin: 9px 0;
+border: none;
+border-radius: 9px;
+cursor: pointer;
+	}
+/*****************************************************************************/	
+/*Issue 1*/
+/*The issues alternate formating, even issues are derivitives of issue 2 while odd issues are derivitives of issue 1*/
+/*The nested div in each just keeps the paragraph formating from inheriting that from above, I used a p with a bullet point instead of an unordered list for the sake of easy text wrapping*/
 
 #iss1 {
     background-color: #D0EAFF;
@@ -228,17 +271,8 @@ color: #6194BC;
 #iss12 p{
 	text-align:left;
 }
-input[type=text], textarea, select{
-width: 100%;
-padding: 13px 21px;
-margin: 9px 0;
-display: inline-block;
-border: 5px solid #ccc;
-border-radius: 9px;
-box-sizing: border-box;
-font-size: 15px;
-}
-
+/*****************************************************************************/	
+/*Issue 2*/
 #iss2 {
     background-color: #ECECEC;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -262,7 +296,8 @@ text-align:center;
 #iss22 p{
 text-align:left;
 }
-
+/*****************************************************************************/	
+/*Issue 3*/
 #iss3 {
     background-color: #D0EAFF;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -286,7 +321,8 @@ text-align:center;
 #iss32 p{
 text-align:left;
 }
-
+/*****************************************************************************/	
+/*Issue 4*/
 #iss4 {
     background-color: #ECECEC;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -310,7 +346,8 @@ text-align:center;
 #iss42 p{
 text-align:left;
 }
-
+/*****************************************************************************/	
+/*Issue 5*/
 #iss5 {
     background-color: #D0EAFF;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -334,7 +371,8 @@ text-align:center;
 #iss52 p{
 text-align:left;
 }
-
+/*****************************************************************************/	
+/*Issue 6*/
 #iss6 {
     background-color: #ECECEC;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -358,7 +396,8 @@ text-align:center;
 #iss62 p{
 text-align:left;
 }
-
+/*****************************************************************************/
+/*Issue 7*/	
 #iss7 {
     background-color: #D0EAFF;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -382,7 +421,8 @@ text-align:center;
 #iss72 p{
 text-align:left;
 }
-
+/*****************************************************************************/
+/*Issue 8*/	
 #iss8 {
     background-color: #ECECEC;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -406,7 +446,8 @@ text-align:center;
 #iss82 p{
 text-align:left;
 }
-
+/*****************************************************************************/
+/*Issue 9*/	
 #iss9 {
     background-color: #D0EAFF;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -430,7 +471,8 @@ text-align:center;
 #iss92 p{
 text-align:left;
 }
-
+/*****************************************************************************/	
+/*Issue 10*/
 #iss10 {
     background-color: #ECECEC;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -454,7 +496,8 @@ text-align:center;
 #iss102 p{
 text-align:left;
 }
-
+/*****************************************************************************/	
+/*This is the rationality Page*/
 #Algorithm {
     background-color: #D0EAFF;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -475,7 +518,7 @@ text-align:center;
 color:#E4001B;
 text-align:center;
 }
-
+/*****************************************************************************/
 #Rationality {
     background-color: #ECECEC;
     font-family: Tahoma,Helvetica,Arial,sans-serif; 
@@ -496,3 +539,4 @@ text-align:center;
 color:#606060;
 text-align:center;
 }
+
